--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/RuheeRajwani/FamilySite-2#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.8",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongodb": "^3.0.7"
   }
 }
