--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/RuheeRajwani/FamilySite-2#readme",
   "dependencies": {
+    "argv": "0.0.2",
     "body-parser": "^1.18.2",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
-    "mongodb": "^3.0.7"
+    "mongodb": "^3.0.7",
+    "request": "^2.86.0",
+    "yargs": "^11.0.0"
   }
 }
